feat(user-timeline): added tests and fix some logic